--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
     "expo": "^50.0.2",
     "react": "18.2.0",
-    "react-native": "npm:react-native-tvos@^0.73.2-0"
+    "react-native": "npm:react-native-tvos@^0.73.2-0",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
